# GenerativeFramework

./: CMakeLists.txt
Applications/EvoTest/: Application.cpp  CMakeLists.txt
Applications/OrbitLine/: Application.cpp  CMakeLists.txt
Resources/: CMakeLists.txt  line.frag  line.vert
Source/: Application.cpp  CMakeLists.txt  Camera.h  Circle.h  Geometry.h  PolyLine.h  Recorder.cpp  Recorder.h  Renderer.cpp  Renderer.h
Source/Shaders/: line.glsl  quad.glsl  texture.glsl
